--- a/Frontend/my-app/src/app/dashboard-Mess/Dashboard-Mess.css
+++ b/Frontend/my-app/src/app/dashboard-Mess/Dashboard-Mess.css
@@ -23,8 +23,8 @@
     width: 80rem;
     background-color: azure;
 } */
-
-.MessDashboard-HeadingDiv{
+ 
+/* .MessDashboard-HeadingDiv{
     background-color: burlywood;
     width: 90%;
     height:4rem;
@@ -39,4 +39,4 @@
     height: 38rem;
     width: 95%;
     margin-left: 2rem;
-}
+} */
