--- a/Frontend/my-app/src/app/DayPicker/DayPicker.css
+++ b/Frontend/my-app/src/app/DayPicker/DayPicker.css
@@ -5,7 +5,9 @@
     display:flex;
     justify-content: center;
     align-items: center;
+    border: none;
 }
+
 .CalenderComp{
     display: flex;
     justify-content: center;
@@ -13,12 +15,10 @@
     width: 100%;
     height: 100%;
 }
-.Calender{
-  /* width: inherit;
+
+.calendar{
+  width: inherit;
   height: inherit;
-  background-color: chartreuse; */
-  /* background-color: #f7fafc;
-  padding: 16px;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
-} 
+  font-size: 2rem;
+  
+}
